--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "app.js",
     "dependencies": {
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "mongoose": "^5.8.7"
     },
     "scripts": {
         "start": "node app.js",
